beta 0.1.7.5: Modulo 3 previo a agregar OpcionProducto (tabla intermedia).